--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,17 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+
+    android:orientation="vertical"
     tools:context="com.example.administrator.helloworld.MainActivity">
 
     <TextView
+        android:layout_gravity="center_horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
-</RelativeLayout>
+        android:text="@string/text_desc"
+        android:id="@+id/text"
+        android:textSize="20sp"
+        android:layout_marginBottom="20dp"
+        android:layout_marginTop="20dp"/>
+
+    <Button
+        style="@style/button_basic_style"
+        android:text="@string/file"
+        android:id="@+id/film"
+        />
+
+    <Button
+        style="@style/button_basic_style"
+        android:text="@string/share"
+        android:id="@+id/shares"
+        />
+
+    <Button
+        style="@style/button_basic_style"
+        android:text="@string/reader"
+        android:id="@+id/reader"
+        />
+
+    <Button
+        style="@style/button_basic_style"
+        android:text="@string/news"
+        android:id="@+id/news"
+        />
+    <Button
+        style="@style/button_basic_style"
+        android:text="@string/design"
+        android:id="@+id/design"
+    />
+</LinearLayout>
